INCLUDES += -I$(srcdir) -I$(srcdir)/../../../../dep/include -I$(srcdir)/../../../ascent-shared
INCLUDES += -I$(srcdir)/../../../ascent-world -I$(srcdir)/../../../../dep/src

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libBattleQuest.la

libBattleQuest_la_SOURCES = Base.cpp \
	Base.h \
	CustomClass.h \
	GenericBattleground.cpp \
	GenericBattleground.h \
	Global.cpp \
	Global.h \
	HealerBadges.cpp \
	HookMgr.cpp \
	HookMgr.h \
	Mounts.cpp \
	TrelimLorn.cpp \
	ZoneHellfirePeninsula.cpp \
	Setup.cpp
