INCLUDES = -I$(top_srcdir)/src/ascent-logonserver \
   -I$(top_srcdir)/src/ascent-realmserver -I$(top_srcdir)/src/ascent-shared -I$(top_srcdir)/src/ascent-voicechat \
   -I$(top_srcdir)/src/ascent-world -I$(srcdir) -I$(srcdir)/../../../../dep/include \
   -I$(srcdir)/../../../../dep/src -I$(srcdir)/../../../../src

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libRS_Scripts.la

libRS_Scripts_la_SOURCES = Ashenvale.cpp \
Azuremyst_Isle.cpp \
Barrens.cpp \
BladeEdge_Mountains.cpp \
BloodSail_AI.cpp \
BruiserAI.cpp \
Custom_DJ.cpp \
Custom_Teleporters.cpp \
Darkmoon_faire.cpp \
Druid.cpp \
Durotar.cpp \
Eastern.cpp \
Eastern_Plaguelands.cpp \
EmoteScript.cpp \
GameObjects.cpp \
GossipNPC.cpp \
GuildLinkedVendors.cpp \
Hellfire_Peninsula.cpp \
IGossip_SurgeonKit.cpp \
IGossip_TomeOfExp.cpp \
Isle_of_QuelDanas.cpp \
ItemGossip.cpp \
JustiniusAI.cpp \
KillTheKing.cpp \
KSlothAI.cpp \
Mage.cpp \
Messenger.cpp \
MiscQuest.cpp \
MobScripts.cpp \
MoonMisc.cpp \
MorphingScroll.cpp \
MorphR.cpp \
Nagrand.cpp \
Object_Teleporters.cpp \
Paladin.cpp \
PlayerHouses.cpp \
PortToFriends.cpp \
PvPKill.cpp \
PVPTitles.cpp \
QuestAccept.cpp \
RandomScripts.cpp \
Servant.cpp \
ServerHooks.cpp \
Shadowmoon.cpp \
Silverpine_Forest.cpp \
Stand_State.cpp \
StormwindScript.cpp \
TalentCap.cpp \
Terrokar_Forest.cpp \
TN_Guardian.cpp \
TokenNPC.cpp \
Undercity.cpp \
UnGoro.cpp \
Warlock_DSteed.cpp \
Zangarmarsh.cpp \
Setup.cpp
